src/main/kotlin/com/example/point/domain/user/errors/PointError.kt
package com.example.point.domain.user.errors

open class PointError(errorMessage: String): Exception(errorMessage) {
}